# Hearth

./: .dockerignore  .gitignore  1x.md  DEPLOYMENT.md  LICENSE  README.md  README_CN.md  deploy.sh  pyproject.toml  start.md  tmp_unicode_test.txt  ui.md
docs/: README.md  README.zh-CN.md  api-reference.md  api-reference.zh-CN.md  architecture-v0.1.md  config-reference.md  config-reference.zh-CN.md  deployment.md  deployment.zh-CN.md  getting-started.md  getting-started.zh-CN.md  network-model.md  network-model.zh-CN.md  security.md  security.zh-CN.md
examples/: hearth.toml
packaging/: install.sh
packaging/docker/: Dockerfile  docker-compose.yml
packaging/systemd/: hearth.service
src/hearth/: __main__.py
src/hearth/api/: deps.py  main.py  routes_alerts.py  routes_announces.py  routes_audit.py  routes_backup.py  routes_bridges.py  routes_config.py  routes_diagnostics.py  routes_fleet.py  routes_interfaces.py  routes_logs.py  routes_maintenance.py  routes_metrics.py  routes_node.py  routes_peers.py  routes_plugins.py  routes_remote_logs.py  routes_rollouts.py  routes_routes.py  routes_security.py  routes_services.py  routes_topology.py  routes_upgrade.py  security.py
src/hearth/cli/: main.py
src/hearth/core/: app.py  config.py  events.py  lifecycle.py  scheduler.py
src/hearth/crypto/: __init__.py  ed25519.py
src/hearth/discovery/: learning.py  peers.py  (+1 more)
tests/unit/: test_api.py  test_cli.py  test_config.py  test_ed25519.py  test_i18n.py  test_phase_b.py  test_phase_c.py  test_phase_d.py  test_phase_e.py  test_reticulum_import.py  test_web_ui.py
(+104 files in other folders)
