[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hearth"
version = "0.1.0"
description = "Hearth: a control plane for Personal Reticulum Transport Nodes"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Vic Liu" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "pydantic>=2.9.0",
  "sqlalchemy>=2.0.36",
  "tomli-w>=1.1.0",
  "typer>=0.16.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[project.scripts]
hearth = "hearth.cli.main:main"
hearth-api = "hearth.core.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hearth"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
